--- a/App.config
+++ b/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+  <connectionStrings>
+    <add name="CSSkola" connectionString="Data source=INF_4_PROFESOR\SQLPBG; Initial catalog=MilosP2021; Integrated security=true"/>
+  </connectionStrings>
 </configuration>
